Proj2/Backups/Backup1_works/y.output
Terminals unused in grammar

   ERROR


State 104 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 var_declaration: type_specifier getID SEMI
    7                | type_specifier getID LSQ getNUM RSQ SEMI

    8 type_specifier: INT
    9               | VOID

   10 fun_declaration: type_specifier getID LPAREN params RPAREN compound_stmt

   11 params: /* empty */
   12       | param_list
   13       | VOID

   14 param_list: param_list param
   15           | param_list COMMA param
   16           | param

   17 param: type_specifier getID
   18      | type_specifier getID LSQ RSQ

   19 compound_stmt: LCURLY local_declarations statement_list RCURLY

   20 local_declarations: /* empty */
   21                   | local_declarations var_declaration

   22 statement_list: /* empty */
   23               | statement_list statement

   24 statement: expression_stmt
   25          | compound_stmt
   26          | selection_stmt
   27          | iteration_stmt
   28          | return_stmt

   29 expression_stmt: expression SEMI
   30                | SEMI

   31 selection_stmt: IF LPAREN expression RPAREN statement
   32               | IF LPAREN expression RPAREN statement ELSE statement

   33 iteration_stmt: WHILE LPAREN expression RPAREN statement

   34 return_stmt: RETURN SEMI
   35            | RETURN expression SEMI

   36 expression: var ASSIGN expression
   37           | simple_expression

   38 var: getID
   39    | getID LSQ expression RSQ

   40 simple_expression: additive_expression LT additive_expression
   41                  | additive_expression LTEQ additive_expression
   42                  | additive_expression GT additive_expression
   43                  | additive_expression GTEQ additive_expression
   44                  | additive_expression EQ additive_expression
   45                  | additive_expression NEQ additive_expression
   46                  | additive_expression

   47 additive_expression: additive_expression PLUS term
   48                    | additive_expression MINUS term
   49                    | term

   50 term: term TIMES factor
   51     | term OVER factor
   52     | factor

   53 factor: LPAREN expression RPAREN
   54       | var
   55       | call
   56       | getNUM

   57 call: getID LPAREN args RPAREN

   58 args: /* empty */
   59     | arg_list

   60 arg_list: arg_list COMMA expression
   61         | expression

   62 getNUM: NUM

   63 getID: ID


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 31 32
ELSE (259) 32
INT (260) 8
RETURN (261) 34 35
VOID (262) 9 13
WHILE (263) 33
ASSIGN (264) 36
EQ (265) 44
LT (266) 40
LTEQ (267) 41
GT (268) 42
GTEQ (269) 43
NEQ (270) 45
PLUS (271) 47
MINUS (272) 48
TIMES (273) 50
OVER (274) 51
LPAREN (275) 10 31 32 33 53 57
RPAREN (276) 10 31 32 33 53 57
LSQ (277) 7 18 39
RSQ (278) 7 18 39
LCURLY (279) 19
RCURLY (280) 19
COMMA (281) 15 60
SEMI (282) 6 7 29 30 34 35
ID (283) 63
NUM (284) 62
ERROR (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
program (32)
    on left: 1, on right: 0
declaration_list (33)
    on left: 2 3, on right: 1 2
declaration (34)
    on left: 4 5, on right: 2 3
var_declaration (35)
    on left: 6 7, on right: 4 21
type_specifier (36)
    on left: 8 9, on right: 6 7 10 17 18
fun_declaration (37)
    on left: 10, on right: 5
params (38)
    on left: 11 12 13, on right: 10
param_list (39)
    on left: 14 15 16, on right: 12 14 15
param (40)
    on left: 17 18, on right: 14 15 16
compound_stmt (41)
    on left: 19, on right: 10 25
local_declarations (42)
    on left: 20 21, on right: 19 21
statement_list (43)
    on left: 22 23, on right: 19 23
statement (44)
    on left: 24 25 26 27 28, on right: 23 31 32 33
expression_stmt (45)
    on left: 29 30, on right: 24
selection_stmt (46)
    on left: 31 32, on right: 26
iteration_stmt (47)
    on left: 33, on right: 27
return_stmt (48)
    on left: 34 35, on right: 28
expression (49)
    on left: 36 37, on right: 29 31 32 33 35 36 39 53 60 61
var (50)
    on left: 38 39, on right: 36 54
simple_expression (51)
    on left: 40 41 42 43 44 45 46, on right: 37
additive_expression (52)
    on left: 47 48 49, on right: 40 41 42 43 44 45 46 47 48
term (53)
    on left: 50 51 52, on right: 47 48 49 50 51
factor (54)
    on left: 53 54 55 56, on right: 50 51 52
call (55)
    on left: 57, on right: 55
args (56)
    on left: 58 59, on right: 57
arg_list (57)
    on left: 60 61, on right: 59 60
getNUM (58)
    on left: 62, on right: 7 56
getID (59)
    on left: 63, on right: 6 7 10 17 18 38 39 57


state 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    var_declaration   go to state 6
    type_specifier    go to state 7
    fun_declaration   go to state 8


state 1

    8 type_specifier: INT .

    $default  reduce using rule 8 (type_specifier)


state 2

    9 type_specifier: VOID .

    $default  reduce using rule 9 (type_specifier)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 9


state 4

    1 program: declaration_list .
    2 declaration_list: declaration_list . declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    declaration      go to state 10
    var_declaration  go to state 6
    type_specifier   go to state 7
    fun_declaration  go to state 8


state 5

    3 declaration_list: declaration .

    $default  reduce using rule 3 (declaration_list)


state 6

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


state 7

    6 var_declaration: type_specifier . getID SEMI
    7                | type_specifier . getID LSQ getNUM RSQ SEMI
   10 fun_declaration: type_specifier . getID LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 11

    getID  go to state 12


state 8

    5 declaration: fun_declaration .

    $default  reduce using rule 5 (declaration)


state 9

    0 $accept: program $end .

    $default  accept


state 10

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


state 11

   63 getID: ID .

    $default  reduce using rule 63 (getID)


state 12

    6 var_declaration: type_specifier getID . SEMI
    7                | type_specifier getID . LSQ getNUM RSQ SEMI
   10 fun_declaration: type_specifier getID . LPAREN params RPAREN compound_stmt

    LPAREN  shift, and go to state 13
    LSQ     shift, and go to state 14
    SEMI    shift, and go to state 15


state 13

   10 fun_declaration: type_specifier getID LPAREN . params RPAREN compound_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 16

    $default  reduce using rule 11 (params)

    type_specifier  go to state 17
    params          go to state 18
    param_list      go to state 19
    param           go to state 20


state 14

    7 var_declaration: type_specifier getID LSQ . getNUM RSQ SEMI

    NUM  shift, and go to state 21

    getNUM  go to state 22


state 15

    6 var_declaration: type_specifier getID SEMI .

    $default  reduce using rule 6 (var_declaration)


state 16

    9 type_specifier: VOID .
   13 params: VOID .

    RPAREN    reduce using rule 13 (params)
    $default  reduce using rule 9 (type_specifier)


state 17

   17 param: type_specifier . getID
   18      | type_specifier . getID LSQ RSQ

    ID  shift, and go to state 11

    getID  go to state 23


state 18

   10 fun_declaration: type_specifier getID LPAREN params . RPAREN compound_stmt

    RPAREN  shift, and go to state 24


state 19

   12 params: param_list .
   14 param_list: param_list . param
   15           | param_list . COMMA param

    INT    shift, and go to state 1
    VOID   shift, and go to state 2
    COMMA  shift, and go to state 25

    $default  reduce using rule 12 (params)

    type_specifier  go to state 17
    param           go to state 26


state 20

   16 param_list: param .

    $default  reduce using rule 16 (param_list)


state 21

   62 getNUM: NUM .

    $default  reduce using rule 62 (getNUM)


state 22

    7 var_declaration: type_specifier getID LSQ getNUM . RSQ SEMI

    RSQ  shift, and go to state 27


state 23

   17 param: type_specifier getID .
   18      | type_specifier getID . LSQ RSQ

    LSQ  shift, and go to state 28

    $default  reduce using rule 17 (param)


state 24

   10 fun_declaration: type_specifier getID LPAREN params RPAREN . compound_stmt

    LCURLY  shift, and go to state 29

    compound_stmt  go to state 30


state 25

   15 param_list: param_list COMMA . param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_specifier  go to state 17
    param           go to state 31


state 26

   14 param_list: param_list param .

    $default  reduce using rule 14 (param_list)


state 27

    7 var_declaration: type_specifier getID LSQ getNUM RSQ . SEMI

    SEMI  shift, and go to state 32


state 28

   18 param: type_specifier getID LSQ . RSQ

    RSQ  shift, and go to state 33


state 29

   19 compound_stmt: LCURLY . local_declarations statement_list RCURLY

    $default  reduce using rule 20 (local_declarations)

    local_declarations  go to state 34


state 30

   10 fun_declaration: type_specifier getID LPAREN params RPAREN compound_stmt .

    $default  reduce using rule 10 (fun_declaration)


state 31

   15 param_list: param_list COMMA param .

    $default  reduce using rule 15 (param_list)


state 32

    7 var_declaration: type_specifier getID LSQ getNUM RSQ SEMI .

    $default  reduce using rule 7 (var_declaration)


state 33

   18 param: type_specifier getID LSQ RSQ .

    $default  reduce using rule 18 (param)


state 34

   19 compound_stmt: LCURLY local_declarations . statement_list RCURLY
   21 local_declarations: local_declarations . var_declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 22 (statement_list)

    var_declaration  go to state 35
    type_specifier   go to state 36
    statement_list   go to state 37


state 35

   21 local_declarations: local_declarations var_declaration .

    $default  reduce using rule 21 (local_declarations)


state 36

    6 var_declaration: type_specifier . getID SEMI
    7                | type_specifier . getID LSQ getNUM RSQ SEMI

    ID  shift, and go to state 11

    getID  go to state 38


state 37

   19 compound_stmt: LCURLY local_declarations statement_list . RCURLY
   23 statement_list: statement_list . statement

    IF      shift, and go to state 39
    RETURN  shift, and go to state 40
    WHILE   shift, and go to state 41
    LPAREN  shift, and go to state 42
    LCURLY  shift, and go to state 29
    RCURLY  shift, and go to state 43
    SEMI    shift, and go to state 44
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    compound_stmt        go to state 45
    statement            go to state 46
    expression_stmt      go to state 47
    selection_stmt       go to state 48
    iteration_stmt       go to state 49
    return_stmt          go to state 50
    expression           go to state 51
    var                  go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    getNUM               go to state 58
    getID                go to state 59


state 38

    6 var_declaration: type_specifier getID . SEMI
    7                | type_specifier getID . LSQ getNUM RSQ SEMI

    LSQ   shift, and go to state 14
    SEMI  shift, and go to state 15


state 39

   31 selection_stmt: IF . LPAREN expression RPAREN statement
   32               | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 60


state 40

   34 return_stmt: RETURN . SEMI
   35            | RETURN . expression SEMI

    LPAREN  shift, and go to state 42
    SEMI    shift, and go to state 61
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    expression           go to state 62
    var                  go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    getNUM               go to state 58
    getID                go to state 59


state 41

   33 iteration_stmt: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 63


state 42

   53 factor: LPAREN . expression RPAREN

    LPAREN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    expression           go to state 64
    var                  go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    getNUM               go to state 58
    getID                go to state 59


state 43

   19 compound_stmt: LCURLY local_declarations statement_list RCURLY .

    $default  reduce using rule 19 (compound_stmt)


state 44

   30 expression_stmt: SEMI .

    $default  reduce using rule 30 (expression_stmt)


state 45

   25 statement: compound_stmt .

    $default  reduce using rule 25 (statement)


state 46

   23 statement_list: statement_list statement .

    $default  reduce using rule 23 (statement_list)


state 47

   24 statement: expression_stmt .

    $default  reduce using rule 24 (statement)


state 48

   26 statement: selection_stmt .

    $default  reduce using rule 26 (statement)


state 49

   27 statement: iteration_stmt .

    $default  reduce using rule 27 (statement)


state 50

   28 statement: return_stmt .

    $default  reduce using rule 28 (statement)


state 51

   29 expression_stmt: expression . SEMI

    SEMI  shift, and go to state 65


state 52

   36 expression: var . ASSIGN expression
   54 factor: var .

    ASSIGN  shift, and go to state 66

    $default  reduce using rule 54 (factor)


state 53

   37 expression: simple_expression .

    $default  reduce using rule 37 (expression)


state 54

   40 simple_expression: additive_expression . LT additive_expression
   41                  | additive_expression . LTEQ additive_expression
   42                  | additive_expression . GT additive_expression
   43                  | additive_expression . GTEQ additive_expression
   44                  | additive_expression . EQ additive_expression
   45                  | additive_expression . NEQ additive_expression
   46                  | additive_expression .
   47 additive_expression: additive_expression . PLUS term
   48                    | additive_expression . MINUS term

    EQ     shift, and go to state 67
    LT     shift, and go to state 68
    LTEQ   shift, and go to state 69
    GT     shift, and go to state 70
    GTEQ   shift, and go to state 71
    NEQ    shift, and go to state 72
    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74

    $default  reduce using rule 46 (simple_expression)


state 55

   49 additive_expression: term .
   50 term: term . TIMES factor
   51     | term . OVER factor

    TIMES  shift, and go to state 75
    OVER   shift, and go to state 76

    $default  reduce using rule 49 (additive_expression)


state 56

   52 term: factor .

    $default  reduce using rule 52 (term)


state 57

   55 factor: call .

    $default  reduce using rule 55 (factor)


state 58

   56 factor: getNUM .

    $default  reduce using rule 56 (factor)


state 59

   38 var: getID .
   39    | getID . LSQ expression RSQ
   57 call: getID . LPAREN args RPAREN

    LPAREN  shift, and go to state 77
    LSQ     shift, and go to state 78

    $default  reduce using rule 38 (var)


state 60

   31 selection_stmt: IF LPAREN . expression RPAREN statement
   32               | IF LPAREN . expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    expression           go to state 79
    var                  go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    getNUM               go to state 58
    getID                go to state 59


state 61

   34 return_stmt: RETURN SEMI .

    $default  reduce using rule 34 (return_stmt)


state 62

   35 return_stmt: RETURN expression . SEMI

    SEMI  shift, and go to state 80


state 63

   33 iteration_stmt: WHILE LPAREN . expression RPAREN statement

    LPAREN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    expression           go to state 81
    var                  go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    getNUM               go to state 58
    getID                go to state 59


state 64

   53 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 82


state 65

   29 expression_stmt: expression SEMI .

    $default  reduce using rule 29 (expression_stmt)


state 66

   36 expression: var ASSIGN . expression

    LPAREN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    expression           go to state 83
    var                  go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    getNUM               go to state 58
    getID                go to state 59


state 67

   44 simple_expression: additive_expression EQ . additive_expression

    LPAREN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    var                  go to state 84
    additive_expression  go to state 85
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    getNUM               go to state 58
    getID                go to state 59


state 68

   40 simple_expression: additive_expression LT . additive_expression

    LPAREN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    var                  go to state 84
    additive_expression  go to state 86
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    getNUM               go to state 58
    getID                go to state 59


state 69

   41 simple_expression: additive_expression LTEQ . additive_expression

    LPAREN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    var                  go to state 84
    additive_expression  go to state 87
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    getNUM               go to state 58
    getID                go to state 59


state 70

   42 simple_expression: additive_expression GT . additive_expression

    LPAREN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    var                  go to state 84
    additive_expression  go to state 88
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    getNUM               go to state 58
    getID                go to state 59


state 71

   43 simple_expression: additive_expression GTEQ . additive_expression

    LPAREN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    var                  go to state 84
    additive_expression  go to state 89
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    getNUM               go to state 58
    getID                go to state 59


state 72

   45 simple_expression: additive_expression NEQ . additive_expression

    LPAREN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    var                  go to state 84
    additive_expression  go to state 90
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    getNUM               go to state 58
    getID                go to state 59


state 73

   47 additive_expression: additive_expression PLUS . term

    LPAREN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    var     go to state 84
    term    go to state 91
    factor  go to state 56
    call    go to state 57
    getNUM  go to state 58
    getID   go to state 59


state 74

   48 additive_expression: additive_expression MINUS . term

    LPAREN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    var     go to state 84
    term    go to state 92
    factor  go to state 56
    call    go to state 57
    getNUM  go to state 58
    getID   go to state 59


state 75

   50 term: term TIMES . factor

    LPAREN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    var     go to state 84
    factor  go to state 93
    call    go to state 57
    getNUM  go to state 58
    getID   go to state 59


state 76

   51 term: term OVER . factor

    LPAREN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    var     go to state 84
    factor  go to state 94
    call    go to state 57
    getNUM  go to state 58
    getID   go to state 59


state 77

   57 call: getID LPAREN . args RPAREN

    LPAREN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    $default  reduce using rule 58 (args)

    expression           go to state 95
    var                  go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    args                 go to state 96
    arg_list             go to state 97
    getNUM               go to state 58
    getID                go to state 59


state 78

   39 var: getID LSQ . expression RSQ

    LPAREN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    expression           go to state 98
    var                  go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    getNUM               go to state 58
    getID                go to state 59


state 79

   31 selection_stmt: IF LPAREN expression . RPAREN statement
   32               | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 99


state 80

   35 return_stmt: RETURN expression SEMI .

    $default  reduce using rule 35 (return_stmt)


state 81

   33 iteration_stmt: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 100


state 82

   53 factor: LPAREN expression RPAREN .

    $default  reduce using rule 53 (factor)


state 83

   36 expression: var ASSIGN expression .

    $default  reduce using rule 36 (expression)


state 84

   54 factor: var .

    $default  reduce using rule 54 (factor)


state 85

   44 simple_expression: additive_expression EQ additive_expression .
   47 additive_expression: additive_expression . PLUS term
   48                    | additive_expression . MINUS term

    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74

    $default  reduce using rule 44 (simple_expression)


state 86

   40 simple_expression: additive_expression LT additive_expression .
   47 additive_expression: additive_expression . PLUS term
   48                    | additive_expression . MINUS term

    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74

    $default  reduce using rule 40 (simple_expression)


state 87

   41 simple_expression: additive_expression LTEQ additive_expression .
   47 additive_expression: additive_expression . PLUS term
   48                    | additive_expression . MINUS term

    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74

    $default  reduce using rule 41 (simple_expression)


state 88

   42 simple_expression: additive_expression GT additive_expression .
   47 additive_expression: additive_expression . PLUS term
   48                    | additive_expression . MINUS term

    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74

    $default  reduce using rule 42 (simple_expression)


state 89

   43 simple_expression: additive_expression GTEQ additive_expression .
   47 additive_expression: additive_expression . PLUS term
   48                    | additive_expression . MINUS term

    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74

    $default  reduce using rule 43 (simple_expression)


state 90

   45 simple_expression: additive_expression NEQ additive_expression .
   47 additive_expression: additive_expression . PLUS term
   48                    | additive_expression . MINUS term

    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74

    $default  reduce using rule 45 (simple_expression)


state 91

   47 additive_expression: additive_expression PLUS term .
   50 term: term . TIMES factor
   51     | term . OVER factor

    TIMES  shift, and go to state 75
    OVER   shift, and go to state 76

    $default  reduce using rule 47 (additive_expression)


state 92

   48 additive_expression: additive_expression MINUS term .
   50 term: term . TIMES factor
   51     | term . OVER factor

    TIMES  shift, and go to state 75
    OVER   shift, and go to state 76

    $default  reduce using rule 48 (additive_expression)


state 93

   50 term: term TIMES factor .

    $default  reduce using rule 50 (term)


state 94

   51 term: term OVER factor .

    $default  reduce using rule 51 (term)


state 95

   61 arg_list: expression .

    $default  reduce using rule 61 (arg_list)


state 96

   57 call: getID LPAREN args . RPAREN

    RPAREN  shift, and go to state 101


state 97

   59 args: arg_list .
   60 arg_list: arg_list . COMMA expression

    COMMA  shift, and go to state 102

    $default  reduce using rule 59 (args)


state 98

   39 var: getID LSQ expression . RSQ

    RSQ  shift, and go to state 103


state 99

   31 selection_stmt: IF LPAREN expression RPAREN . statement
   32               | IF LPAREN expression RPAREN . statement ELSE statement

    IF      shift, and go to state 39
    RETURN  shift, and go to state 40
    WHILE   shift, and go to state 41
    LPAREN  shift, and go to state 42
    LCURLY  shift, and go to state 29
    SEMI    shift, and go to state 44
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    compound_stmt        go to state 45
    statement            go to state 104
    expression_stmt      go to state 47
    selection_stmt       go to state 48
    iteration_stmt       go to state 49
    return_stmt          go to state 50
    expression           go to state 51
    var                  go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    getNUM               go to state 58
    getID                go to state 59


state 100

   33 iteration_stmt: WHILE LPAREN expression RPAREN . statement

    IF      shift, and go to state 39
    RETURN  shift, and go to state 40
    WHILE   shift, and go to state 41
    LPAREN  shift, and go to state 42
    LCURLY  shift, and go to state 29
    SEMI    shift, and go to state 44
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    compound_stmt        go to state 45
    statement            go to state 105
    expression_stmt      go to state 47
    selection_stmt       go to state 48
    iteration_stmt       go to state 49
    return_stmt          go to state 50
    expression           go to state 51
    var                  go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    getNUM               go to state 58
    getID                go to state 59


state 101

   57 call: getID LPAREN args RPAREN .

    $default  reduce using rule 57 (call)


state 102

   60 arg_list: arg_list COMMA . expression

    LPAREN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    expression           go to state 106
    var                  go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    getNUM               go to state 58
    getID                go to state 59


state 103

   39 var: getID LSQ expression RSQ .

    $default  reduce using rule 39 (var)


state 104

   31 selection_stmt: IF LPAREN expression RPAREN statement .
   32               | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 107

    ELSE      [reduce using rule 31 (selection_stmt)]
    $default  reduce using rule 31 (selection_stmt)


state 105

   33 iteration_stmt: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 33 (iteration_stmt)


state 106

   60 arg_list: arg_list COMMA expression .

    $default  reduce using rule 60 (arg_list)


state 107

   32 selection_stmt: IF LPAREN expression RPAREN statement ELSE . statement

    IF      shift, and go to state 39
    RETURN  shift, and go to state 40
    WHILE   shift, and go to state 41
    LPAREN  shift, and go to state 42
    LCURLY  shift, and go to state 29
    SEMI    shift, and go to state 44
    ID      shift, and go to state 11
    NUM     shift, and go to state 21

    compound_stmt        go to state 45
    statement            go to state 108
    expression_stmt      go to state 47
    selection_stmt       go to state 48
    iteration_stmt       go to state 49
    return_stmt          go to state 50
    expression           go to state 51
    var                  go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    getNUM               go to state 58
    getID                go to state 59


state 108

   32 selection_stmt: IF LPAREN expression RPAREN statement ELSE statement .

    $default  reduce using rule 32 (selection_stmt)
